--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -50,6 +50,7 @@
     "concurrently": "^8.0.1",
     "crisp-sdk-web": "^1.0.19",
     "d3-array": "^3.2.4",
+    "fast-xml-parser": "^4.3.6",
     "framer-motion": "^10.16.16",
     "fuse.js": "^6.6.2",
     "github-slugger": "^2.0.0",
@@ -60,6 +61,7 @@
     "nanoid": "^5.0.1",
     "next": "14.2.0-canary.21",
     "next-auth": "^4.24.4",
+    "node-fetch": "^3.3.2",
     "node-html-parser": "^6.1.4",
     "nodemailer": "^6.9.3",
     "openapi-types": "^12.1.3",
