--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -49,6 +49,7 @@
     "cmdk": "^0.2.0",
     "cobe": "^0.6.3",
     "concurrently": "^8.0.1",
+    "contentlayer": "^0.3.4",
     "crisp-sdk-web": "^1.0.19",
     "d3-array": "^3.2.4",
     "fast-xml-parser": "^4.3.6",
@@ -62,6 +63,7 @@
     "nanoid": "^5.0.1",
     "next": "14.2.0-canary.21",
     "next-auth": "^4.24.4",
+    "next-contentlayer": "^0.3.4",
     "node-fetch": "^3.3.2",
     "node-html-parser": "^6.1.4",
     "nodemailer": "^6.9.3",
@@ -90,6 +92,7 @@
     "stripe": "^12.12.0",
     "swr": "^2.1.5",
     "topojson-client": "^3.1.0",
+    "unified": "10.1.2",
     "unsplash-js": "^7.0.18",
     "use-debounce": "^8.0.4",
     "vaul": "^0.6.8",
