use contentlayer in package.json to build

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,8 +3,8 @@
   "private": true,
   "license": "AGPL-3.0-or-later",
   "scripts": {
-    "dev": "concurrently --kill-others \"prisma generate && next dev --turbo --port 8888\" \"prisma generate && prisma studio --browser none\" \"email dev --port 3333\"",
-    "build": "prisma generate & next build",
+    "dev": "contentlayer build && concurrently --kill-others \"contentlayer dev\" \"prisma generate && next dev --turbo --port 8888\" \"prisma generate && prisma studio --browser none\" \"email dev --port 3333\"",
+    "build": "contentlayer build && prisma generate && next build",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "lint": "next lint",
     "start": "next start",
@@ -61,7 +61,7 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.386.0",
     "nanoid": "^5.0.1",
-    "next": "14.2.0-canary.21",
+    "next": "14.2.5",
     "next-auth": "^4.24.4",
     "next-contentlayer": "^0.3.4",
     "node-fetch": "^3.3.2",
